Done Home,Fav,Cart,More,Verifiaction screens

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="purple">#3D348B</color>
     <color name="green">#2BC840</color>
     <color name="yellow">#F7B801</color>
+    <color name="gray">#EAEAEA</color>
+    <color name="lightPurple">#7678ED</color>
 </resources>
