--- a/app/src/main/res/layout/games.xml
+++ b/app/src/main/res/layout/games.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
@@ -21,7 +23,7 @@
             android:background="@drawable/rounded_card">
 
             <ImageView
-                android:id="@+id/back_More"
+                android:id="@+id/back_games"
                 android:layout_width="30dp"
                 android:layout_height="25dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -44,10 +46,49 @@
                 android:textStyle="bold"
                 android:textAlignment="center"
 
+
                 />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
+    <SearchView
+        android:id="@+id/search_view"
+        android:layout_width="340dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/GamesView"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:textColor="@android:color/black"
+        android:background="@drawable/rounded_search"
+        android:queryHint="What are you looking for?"
+        android:backgroundTint="@color/gray"
+        android:layout_marginLeft="30dp"
+        />
+    <ImageView
+        android:id="@+id/filterIcon"
+        android:layout_width="50dp"
+        android:layout_height="25dp"
+        android:src="@drawable/filter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/GamesView"
+        app:layout_constraintStart_toEndOf="@id/search_view"
+        android:layout_marginTop="27dp"
+
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclergames"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/search_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/game_item_design"
+        android:layout_margin="5dp"
+
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
